--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 quarkus.smallrye-graphql-client.component-dynamic.url=http://localhost:8080/graphql
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=postgres
+quarkus.datasource.password=1234
+quarkus.datasource.reactive.url=postgresql://localhost:5432/postgres
+myapp.schema.create=true
